--- a/Latihan 4.css
+++ b/Latihan 4.css
@@ -8,12 +8,12 @@
 	h1 {text-shadow: 2px 2px;}
 	img {border-radius: 20px;}
 	img {margin-left: 50px;}
-	body {background-color: violet;}
-	th {background-color: brown;}
+	body {background-color: PaleGreen;}
+	th {background-color: PeachPuff;}
 	th {font-family: Lucida Handwriting, serif;}
-	td{background-color: white;}
+	td{background-color: PapayaWhip;}
 	table {margin: 25px 50px 25px 50px;}
 	table {border-radius: 10px;}
 	p {font-family: Lucida Handwriting, serif;}
-	p {color: DeepPink;}
+	p {color: ForestGreen;}
 </style>
